swagger and db
